@@ -83,8 +83,8 @@ Library
     base              >= 4.6    && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
     bytestring        >= 0.9    && < 0.11,
+    bytestring-builder             < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -140,8 +140,8 @@ Test-suite websockets-tests
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
     bytestring        >= 0.9    && < 0.11,
+    bytestring-builder             < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -166,8 +166,8 @@ Executable websockets-example
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
     bytestring        >= 0.9    && < 0.11,
+    bytestring-builder             < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -194,8 +194,8 @@ Executable websockets-autobahn
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
     bytestring        >= 0.9    && < 0.11,
+    bytestring-builder             < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -220,8 +220,8 @@ Benchmark bench-mask
         base              >= 4      && < 5,
         base64-bytestring >= 0.1    && < 1.1,
         binary            >= 0.8.1  && < 0.10,
-        blaze-builder     >= 0.3    && < 0.5,
         bytestring        >= 0.9    && < 0.11,
+        bytestring-builder             < 0.11,
         case-insensitive  >= 0.3    && < 1.3,
         containers        >= 0.3    && < 0.6,
         network           >= 2.3    && < 2.7,
